--- a/mta.yaml
+++ b/mta.yaml
@@ -8,6 +8,12 @@ modules:
   requires:
   - name: smartProviderMontana_html_repo_runtime
   - name: uaa_smartProviderMontana
+  - name: smartWorkDocs-destination-service
+    group: destinations
+    properties:
+      forwardAuthToken: false
+      name: ui5
+      url: https://ui5.sap.com
   parameters:
     disk-quota: 256M
     memory: 256M
@@ -18,6 +24,23 @@ modules:
   - name: smartProviderMontana_html_repo_host
     parameters:
       content-target: true
+  build-parameters:
+    build-result: resources
+    requires:
+    - artifacts:
+      - spmaplication.zip
+      name: spmaplication
+      target-path: resources/
+- name: spmaplication
+  type: html5
+  path: aplication
+  build-parameters:
+    build-result: dist
+    builder: custom
+    commands:
+    - npm install
+    - npm run build:cf
+    supported-platforms: []
 resources:
 - name: smartProviderMontana_html_repo_runtime
   type: org.cloudfoundry.managed-service
@@ -36,3 +59,23 @@ resources:
   parameters:
     service: html5-apps-repo
     service-plan: app-host
+- name: smartWorkDocs-destination-service
+  type: org.cloudfoundry.managed-service
+  parameters:
+    config:
+      HTML5Runtime_enabled: false
+      init_data:
+        instance:
+          destinations:
+          - Authentication: NoAuthentication
+            Name: ui5
+            ProxyType: Internet
+            Type: HTTP
+            URL: https://ui5.sap.com
+          existing_destinations_policy: update
+      version: 1.0.0
+    service: destination
+    service-name: smartWorkDocs-destination-service
+    service-plan: lite
+parameters:
+  deploy_mode: html5-repo
